# datafusion-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  websocket-table-function-plan.md
.claude/: settings.local.json
.github/workflows/: checks.yml  test.yml
crates/datafusion-app/: Cargo.toml  README.md
crates/datafusion-app/src/: config.rs  flightsql.rs  local.rs  stats.rs
crates/datafusion-app/src/catalog/: clickhouse.rs  mod.rs  mongodb.rs
crates/datafusion-app/src/executor/: io.rs
crates/datafusion-app/src/extensions/: builder.rs  clickhouse.rs  deltalake.rs  huggingface.rs  mod.rs  mongodb.rs
crates/datafusion-app/src/tables/: map_table.rs  mod.rs  websocket.rs
crates/datafusion-auth/: Cargo.toml  README.md
crates/datafusion-functions-parquet/: Cargo.toml
crates/datafusion-functions-parquet/src/: lib.rs  page_index.rs
crates/datafusion-net/: Cargo.toml  README.md
crates/datafusion-net/src/: conversations.rs  decode.rs  dns.rs  file.rs  geoip.rs  interfaces.rs  lib.rs  live.rs  schema.rs  tls.rs  udfs.rs  wide.rs  writer.rs
crates/datafusion-net/tests/: conversations.rs  geoip.rs  roundtrip.rs  wide.rs
crates/datafusion-net/tests/common/: mod.rs
crates/datafusion-udfs-wasm/: Cargo.toml
docs/: config.md  features.md
src/: args.rs  config.rs  main.rs  tpch.rs
src/app/datafusion/: context.rs
src/app/datafusion/object_stores/: azure.rs  mod.rs  s3.rs
src/cli/: mod.rs
src/server/flightsql/: mod.rs
src/server/http/: mod.rs
src/tui/: execution.rs  mod.rs
src/tui/state/tabs/: flightsql.rs  sql.rs
tests/: config.rs
tests/cli_cases/: basic.rs  tpch.rs
tests/extension_cases/: .websocket.rs.pending-snap  clickhouse.rs  deltalake.rs  flightsql.rs  mod.rs  mongodb.rs  net.rs  s3.rs  websocket.rs
tests/tui_cases/: mod.rs  quit.rs
